[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/ChoosingLvl.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 112
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=14]
length = 12.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4, 8, 12 )
}

[sub_resource type="Animation" id=15]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Nights/BossLevel/PlayButton9:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "> Play Night %", "> Play Night $", "> Play Night 9", "> Play Night %", "> Play Night #" ]
}

[node name="ChoosingLvl" type="Node2D"]
position = Vector2( 0, 10 )
script = ExtResource( 2 )

[node name="Back" type="Button" parent="."]
margin_left = 20.6699
margin_top = 9.94341
margin_right = 138.67
margin_bottom = 53.9434
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "BAck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 74.2612
margin_top = 46.7672
margin_right = 840.261
margin_bottom = 147.768
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 7 )
text = "Choose night"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nights" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Nights"]
margin_left = 30.0
margin_top = 141.911
margin_right = 372.0
margin_bottom = 191.911
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton2" type="Button" parent="Nights"]
margin_left = 30.0
margin_top = 193.429
margin_right = 389.0
margin_bottom = 243.429
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton3" type="Button" parent="Nights"]
margin_left = 30.0
margin_top = 240.672
margin_right = 389.0
margin_bottom = 290.672
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton4" type="Button" parent="Nights"]
margin_left = 30.0
margin_top = 298.11
margin_right = 389.0
margin_bottom = 348.11
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton5" type="Button" parent="Nights"]
margin_left = 30.0
margin_top = 356.629
margin_right = 389.0
margin_bottom = 406.629
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton6" type="Button" parent="Nights"]
margin_left = 30.0
margin_top = 419.61
margin_right = 389.0
margin_bottom = 469.61
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton7" type="Button" parent="Nights"]
margin_left = 392.724
margin_top = 143.671
margin_right = 751.724
margin_bottom = 193.671
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton8" type="Button" parent="Nights"]
margin_left = 390.089
margin_top = 194.748
margin_right = 749.089
margin_bottom = 244.748
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night 8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossLevel" type="Control" parent="Nights"]
margin_top = -59.0
margin_right = 40.0
margin_bottom = -19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossLabels" type="Label" parent="Nights/BossLevel"]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
margin_left = 392.206
margin_top = 302.955
margin_right = 432.206
margin_bottom = 316.955
rect_scale = Vector2( 0.75, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Nights/BossLevel/BossLabels"]
margin_left = 0.000183105
margin_top = -2.66666
margin_right = 359.0
margin_bottom = 41.3333
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.74902, 0.960784, 0.886275, 1 )
text = "> Play Night #"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Nights/BossLevel/BossLabels"]
margin_left = 2.66675
margin_top = 1.33334
margin_right = 361.667
margin_bottom = 45.3333
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.94902, 0.74902, 0.960784, 1 )
text = "> Play Night %"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Nights/BossLevel/BossLabels"]
margin_left = 8.00024
margin_top = 6.66669
margin_right = 367.0
margin_bottom = 50.6667
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.960784, 0.952941, 0.74902, 1 )
text = "> Play Night 9
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Nights/BossLevel/BossLabels"]
margin_left = 13.3339
margin_top = 10.6667
margin_right = 372.334
margin_bottom = 54.6667
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.764706, 0.960784, 0.74902, 1 )
text = "> Play Night #"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton9" type="Button" parent="Nights/BossLevel"]
margin_left = 392.206
margin_top = 302.955
margin_right = 763.206
margin_bottom = 352.955
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> Play Night #"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "def"
anims/def = SubResource( 14 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Def"
anims/Def = SubResource( 15 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Nights/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Nights/PlayButton2" to="." method="_on_PlayButton2_pressed"]
[connection signal="pressed" from="Nights/PlayButton3" to="." method="_on_PlayButton3_pressed"]
[connection signal="pressed" from="Nights/PlayButton4" to="." method="_on_PlayButton4_pressed"]
[connection signal="pressed" from="Nights/PlayButton5" to="." method="_on_PlayButton5_pressed"]
[connection signal="pressed" from="Nights/PlayButton6" to="." method="_on_PlayButton6_pressed"]
[connection signal="pressed" from="Nights/PlayButton7" to="." method="_on_PlayButton7_pressed"]
[connection signal="pressed" from="Nights/PlayButton8" to="." method="_on_PlayButton8_pressed"]
